Fixed horizontal scroll issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,7 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: var(--font-varela-round), sans-serif;
+  overflow-x: hidden;
 }
 
 /* In your Tailwind CSS file */
